# killswitch

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: process.rs
src/components/: ProcessList.tsx  ProcessRow.tsx  SearchBar.tsx  SortControls.tsx
src/hooks/: useProcesses.ts  useSort.ts
